--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.2.2",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.4",
+    "firebase": "^9.14.0",
     "next": "^13.0.4",
     "react": "18.2.0",
     "react-awesome-reveal": "^4.1.0",
